test/libyul/yulSyntaxTests/number_literal_5.yul
{ let x := 0x1ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff }
// ----
// TypeError 6708: (11-78): Number literal too large (> 256 bits)
